<resources>
    <string name="app_name">WallsGeyser</string>
    <string name="search_drawer">Search</string>
    <string name="background_drawer">Background</string>
    <string name="nature_drawer">Nature</string>
    <string name="fashion_drawer">Fashion</string>
    <string name="animals_drawer">Animals</string>
    <string name="computer_drawer">Computer</string>
    <string name="search_field">Search</string>
    <string name="search_button">Search</string>
    <string name="retry_button">Retry</string>
    <string name="setting_wallpaper_message">Setting wallpaper</string>
</resources>
