<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/allScreenFragment">

    <fragment
        android:id="@+id/fashionScreenFragment"
        android:name="com.ratushny.wallsgeyser.screens.fashion.FashionScreenFragment"
        android:label="@string/fashion_drawer" />
    <fragment
        android:id="@+id/natureScreenFragment"
        android:name="com.ratushny.wallsgeyser.screens.nature.NatureScreenFragment"
        android:label="@string/nature_drawer" />
    <fragment
        android:id="@+id/backgroundScreenFragment"
        android:name="com.ratushny.wallsgeyser.screens.background.BackgroundScreenFragment"
        android:label="@string/background_drawer" />
    <fragment
        android:id="@+id/animalsScreenFragment"
        android:name="com.ratushny.wallsgeyser.screens.animals.AnimalsScreenFragment"
        android:label="@string/animals_drawer" />
    <fragment
        android:id="@+id/computerScreenFragment"
        android:name="com.ratushny.wallsgeyser.screens.computer.ComputerScreenFragment"
        android:label="@string/computer_drawer" />
    <fragment
        android:id="@+id/allScreenFragment"
        android:name="com.ratushny.wallsgeyser.screens.all.AllScreenFragment"
        android:label="@string/app_name" />
</navigation>